fixed css on mobile

--- a/views/scss/_post.scss
+++ b/views/scss/_post.scss
@@ -1,5 +1,5 @@
 .content__post-event {
-  margin:10px auto;
+  margin:1	0px auto;
   // text-align: center;
 }
 
@@ -18,7 +18,7 @@ textarea:focus, input:focus{
 
 input {
 	height: 30px;
-	width: 360px;
+	width: 50%;
 	font-size: 16px;
 	border-radius: 5px;
 	border: 1px solid black;
@@ -31,8 +31,8 @@ input, label {
 
 textarea {
 	@extend input;
-	width: 360px;
-	height: 180px;
+	width: 50%;
+	height: 100%;
 }
 
 label {
@@ -59,4 +59,16 @@ label, input, textarea {
 	.date-example {
 		// margin-left: 20px;
 	}
+}
+
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 568px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+
+    input, textarea {
+	width: 100%;
+		}
+
+
 }
