--- a/views/scss/main.scss
+++ b/views/scss/main.scss
@@ -50,7 +50,7 @@ body {
 
 .content__home__message {
   width: 75%;
-  height: 60%;
+  height: auto;
   background-color: #040309;
   margin: auto;
   padding-top: 30px;
@@ -58,6 +58,7 @@ body {
   font-size: 16px;
   padding-left: 50px;
   padding-right: 50px;
+  padding-bottom: 50px;
 }
 
 .content__home__message__title {
@@ -135,4 +136,27 @@ body {
   .content__home__message {
     font-size: 18px;
   }
+}
+
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 568px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+
+    .content__profile__username {
+      width:100%;
+    }
+
+    .content__profile__nickname {
+      width:100%;
+    }
+
+    .content__event__image {
+      float: none;
+    }
+
+    .content__event{
+      padding-top: 13px;
+    }
+
 }
